fix: layout issues

--- a/src/styles/_blockquote.scss
+++ b/src/styles/_blockquote.scss
@@ -1,5 +1,6 @@
 .blockquote {
-    // max-width: 600px;
+    margin: 0 auto;
+    max-width: 600px;
 
     // @media (max-width: 400px) {
     //     max-width: 250px;
