--- a/src/styles/_custom.scss
+++ b/src/styles/_custom.scss
@@ -50,8 +50,13 @@
 
 .hero {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: 1fr 2fr;
+    // grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     margin-bottom: 2em;
+
+    @media (max-width: 576px) {
+        grid-template-columns: 1fr;
+    }
 }
 
 .project-image {
